unpackaged/main/default/objects/Assessment_Report__c/Assessment_Report__c.object-meta.xml
<CustomObject>
    <label>Assessment Report</label>
    <nameField>
        <displayFormat>AR-{0000}</displayFormat>
        <label>Assessment Report Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assessment Reports</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>