unpackaged/main/default/objects/Assessment_Report__c/fields/Assessment__c.field-meta.xml
<CustomField>
    <fullName>Assessment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessment</label>
    <referenceTo>Assessments__c</referenceTo>
    <relationshipLabel>Assessment Reports</relationshipLabel>
    <relationshipName>Assessment_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>