unpackaged/main/default/objects/Assessment_Report__c/fields/Assessment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assessment_Date__c</fullName>
    <formula>Application__r.Assessment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assessment Date</label>
    <type>Date</type>
</CustomField>