unpackaged/main/default/objects/Assessment_Report__c/fields/Assessor__c.field-meta.xml
<CustomField>
    <fullName>Assessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assessor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assessment_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>