unpackaged/main/default/objects/Assessment_Report__c/fields/Non_Compliances_raised__c.field-meta.xml
<CustomField>
    <fullName>Non_Compliances_raised__c</fullName>
    <description>Number of non-compliances raised.</description>
    <inlineHelpText>Number of non-compliances raised.</inlineHelpText>
    <label>Non-Compliances raised</label>
    <summaryForeignKey>Non_Compliance__c.Assessment_Report__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>